# YandexPraktikumMcppProject4

./: CMakeLists.txt  README.md  conanfile.py  main.cpp  tree-sitter-sample.txt
.devcontainer/: Dockerfile  devcontainer.json
files/: sample.py
include/: analyse.hpp  cmd_options.hpp  file.hpp  function.hpp  metric.hpp  metric_accumulator.hpp  utils.hpp
include/metric_accumulator_impl/: accumulators.hpp  average_accumulator.hpp  categorical_accumulator.hpp  sum_average_accumulator.hpp
include/metric_impl/: code_lines_count.hpp  cyclomatic_complexity.hpp  metrics.hpp  naming_style.hpp  parameters_count.hpp
src/: CMakeLists.txt  cmd_options.cpp  file.cpp  function.cpp  metric.cpp  metric_accumulator.cpp
src/metric_accumulator_impl/: CMakeLists.txt  average_accumulator.cpp  categorical_accumulator.cpp  sum_average_accumulator.cpp
src/metric_accumulator_impl/tests/: average_accumulator.cpp  categorical_accumulator.cpp  sum_average_accumulator.cpp  test_data_producer.hpp  typed_tests.cpp
src/metric_impl/: CMakeLists.txt  code_lines_count.cpp  cyclomatic_complexity.cpp  naming_style.cpp  parameters_count.cpp
src/metric_impl/tests/: code_lines_count.cpp  cyclomatic_complexity.cpp  metric_from_file_getter.hpp  naming_style.cpp  parameters_count.cpp
src/metric_impl/tests/files/: comments.py  exceptions.py  if.py  loops.py  many_lines.py  many_parameters.py  match_case.py  nested_if.py  simple.py  ternary.py
